[package]
name = "diamond"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
substring = { version = "1.4.5" }
hex = "0.4.3"
base64 = "0.13.0"
serde_json = "1.0.82"

rust-crypto = "0.2" # to use for keccak256

#der = "0.6.0"
pkcs1 = { version = "0.4.0", features = ["alloc", "pem"]}
pkcs8 = { version = "0.9.0", features = ["encryption", "alloc", "pem"]}
rsa = { version = "0.6.1" }


rand = "0.8.5"
rand_core = "0.6.3"
#p256 = "0.11.1"
#ecdsa = "0.14.3"
bech32 = { version = "0.9.0", default-features = false }
secp256k1 = { version = "0.24.0", default-features = false, features = ["bitcoin_hashes", "alloc", "rand", "rand-std", "serde" ] }

#sha3 = "0.10.1"

once_cell = "1.13.0"
tokio = { version = "1.20.0", features = ["full"] }
actix-web = "4"
