[package]
name = "diamond"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.1"
substring = { version = "1.4.5" }
hex = "0.4.3"
base64 = "0.13.0"
serde_json = "1.0.82"
lazy_static = "1.4.0"
regex = "1.6.0"

log = "0.4.17"
log4rs = "1.1.1"

rust-crypto = "0.2" # to use for keccak256

pkcs1 = { version = "0.4.0", features = ["alloc", "pem"]}
pkcs8 = { version = "0.9.0", features = ["encryption", "alloc", "pem"]}
rsa = { version = "0.6.1" }
aes = "0.8.1"

rand = "0.8.5"
rand_core = "0.6.3"
bech32 = { version = "0.9.0", default-features = false }
secp256k1 = { version = "0.24.0", default-features = false, features = ["bitcoin_hashes", "alloc", "rand", "rand-std", "serde" ] }

once_cell = "1.13.0"
tokio = { version = "1.20.0", features = ["full"] }

postgres = "0.19.3"
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"]}

actix-web = "4.1.0"

native-tls = "0.2.10"
imap = "2.4.1"
lettre = "0.10.1"

